--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "wvcom": "*"
+    "wvcom": "*",
+    "vue-resource": "*"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -66,6 +67,7 @@
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
+    "vue-resource": "^1.5.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
