--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
 	"name": "wawAngular",
 	"description": "Sample project from waw framework.",
-	"icon": "/client/img/favicon.png",
+	"icon": "/client/src/assets/logo.png",
 	"prefix": "initialize",
 	"license": "MIT",
 	"port": 8080,
 	"session": true,
 	"production": false,
+	"vue": true,
 	"mongo": {
 		"host": "localhost",
 		"port": 27017,
